Adds moped-editor to moped_proj_entities

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -977,6 +977,19 @@
       - project_id
       - date_added
       backend_only: false
+  - role: moped-editor
+    permission:
+      check: {}
+      columns:
+      - project_sponsors
+      - project_groups
+      - partners
+      - workgroups
+      - project_personnel
+      - entity_list_id
+      - project_id
+      - date_added
+      backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
@@ -990,8 +1003,33 @@
       - workgroups
       - date_added
       filter: {}
+  - role: moped-editor
+    permission:
+      columns:
+      - partners
+      - project_personnel
+      - project_sponsors
+      - project_groups
+      - entity_list_id
+      - project_id
+      - workgroups
+      - date_added
+      filter: {}
   update_permissions:
   - role: moped-admin
+    permission:
+      columns:
+      - partners
+      - project_personnel
+      - project_sponsors
+      - project_groups
+      - entity_list_id
+      - project_id
+      - workgroups
+      - date_added
+      filter: {}
+      check: null
+  - role: moped-editor
     permission:
       columns:
       - partners
