Adds moped-editor to moped_proj_fund_source

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -1322,6 +1322,18 @@
       - date_added
       - added_by
       backend_only: false
+  - role: moped-editor
+    permission:
+      check: {}
+      columns:
+      - proj_fund_source_id
+      - funding_source_name
+      - funding_source_category
+      - project_id
+      - funding_source_other
+      - date_added
+      - added_by
+      backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
@@ -1334,8 +1346,31 @@
       - funding_source_name
       - date_added
       filter: {}
+  - role: moped-editor
+    permission:
+      columns:
+      - funding_source_other
+      - added_by
+      - proj_fund_source_id
+      - project_id
+      - funding_source_category
+      - funding_source_name
+      - date_added
+      filter: {}
   update_permissions:
   - role: moped-admin
+    permission:
+      columns:
+      - funding_source_other
+      - added_by
+      - proj_fund_source_id
+      - project_id
+      - funding_source_category
+      - funding_source_name
+      - date_added
+      filter: {}
+      check: null
+  - role: moped-editor
     permission:
       columns:
       - funding_source_other
