--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -1923,6 +1923,27 @@
       - completed_by_user_id
       - date_added
       backend_only: false
+  - role: moped-editor
+    permission:
+      check: {}
+      columns:
+      - phase_name
+      - phase_description
+      - phase_rank
+      - completion_percentage
+      - phase_status
+      - phase_privacy
+      - phase_start
+      - phase_end
+      - phase_priority
+      - is_current_phase
+      - completed
+      - project_phase_id
+      - project_id
+      - started_by_user_id
+      - completed_by_user_id
+      - date_added
+      backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
@@ -1944,8 +1965,49 @@
       - phase_status
       - date_added
       filter: {}
+  - role: moped-editor
+    permission:
+      columns:
+      - completed
+      - is_current_phase
+      - phase_privacy
+      - phase_end
+      - phase_start
+      - completed_by_user_id
+      - completion_percentage
+      - phase_priority
+      - phase_rank
+      - project_id
+      - project_phase_id
+      - started_by_user_id
+      - phase_description
+      - phase_name
+      - phase_status
+      - date_added
+      filter: {}
   update_permissions:
   - role: moped-admin
+    permission:
+      columns:
+      - completed
+      - is_current_phase
+      - phase_privacy
+      - phase_end
+      - phase_start
+      - completed_by_user_id
+      - completion_percentage
+      - phase_priority
+      - phase_rank
+      - project_id
+      - project_phase_id
+      - started_by_user_id
+      - phase_description
+      - phase_name
+      - phase_status
+      - date_added
+      filter: {}
+      check: null
+  - role: moped-editor
     permission:
       columns:
       - completed
