--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -2608,6 +2608,16 @@
       - role_order
       - date_added
       backend_only: false
+  - role: moped-editor
+    permission:
+      check: {}
+      columns:
+      - project_role_id
+      - project_role_name
+      - active_role
+      - role_order
+      - date_added
+      backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
@@ -2618,8 +2628,27 @@
       - project_role_name
       - date_added
       filter: {}
+  - role: moped-editor
+    permission:
+      columns:
+      - active_role
+      - project_role_id
+      - role_order
+      - project_role_name
+      - date_added
+      filter: {}
   update_permissions:
   - role: moped-admin
+    permission:
+      columns:
+      - active_role
+      - project_role_id
+      - role_order
+      - project_role_name
+      - date_added
+      filter: {}
+      check: null
+  - role: moped-editor
     permission:
       columns:
       - active_role
