Adds moped-editor to moped_workgroup

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -2828,6 +2828,14 @@
       - workgroup_id
       - date_added
       backend_only: false
+  - role: moped-editor
+    permission:
+      check: {}
+      columns:
+      - workgroup_name
+      - workgroup_id
+      - date_added
+      backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
@@ -2836,8 +2844,23 @@
       - workgroup_name
       - date_added
       filter: {}
+  - role: moped-editor
+    permission:
+      columns:
+      - workgroup_id
+      - workgroup_name
+      - date_added
+      filter: {}
   update_permissions:
   - role: moped-admin
+    permission:
+      columns:
+      - workgroup_id
+      - workgroup_name
+      - date_added
+      filter: {}
+      check: null
+  - role: moped-editor
     permission:
       columns:
       - workgroup_id
