--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -198,6 +198,16 @@
       - map_representation
       - date_added
       filter: {}
+  - role: moped-viewer
+    permission:
+      columns:
+      - component_id
+      - component_name
+      - component_categories
+      - map_representation
+      - component_order
+      - date_added
+      filter: {}
   update_permissions:
   - role: moped-admin
     permission:
