--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -933,6 +933,19 @@
       - component_unique_id_code
       - date_added
       filter: {}
+  - role: moped-viewer
+    permission:
+      columns:
+      - moped_project_id
+      - moped_component_id
+      - component_length
+      - component_notes
+      - component_unique_id
+      - component_unique_id_code
+      - date_added
+      - moped_proj_component_id
+      - added_by
+      filter: {}
   update_permissions:
   - role: moped-admin
     permission:
